WIP - more progress
